--- a/A1SoftechPeresentation/ClientApp/src/app/update-employee/update-employee.component.html
+++ b/A1SoftechPeresentation/ClientApp/src/app/update-employee/update-employee.component.html
@@ -21,7 +21,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="textinput">Mobile </label>
     <div class="col-md-4">
-    <input id="textinput" name="textinput" formControlName="mobile" type="number" placeholder="Mobile" class="form-control input-md">
+    <input id="textinput" name="textinput" min="0" formControlName="mobile" type="number" placeholder="Mobile" class="form-control input-md">
     </div>
   </div>
   <div class="form-group">
@@ -40,7 +40,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="textinput">Salary </label>
     <div class="col-md-4">
-    <input id="Salary"  name="sal" formControlName="salary" type="number"  placeholder="Salary" class="form-control input-md">
+    <input id="Salary"  name="sal" min="0" formControlName="salary" type="number"  placeholder="Salary" class="form-control input-md">
     </div>
   </div>
   <div class="form-group">
